AppInmobiliaria/force-app/main/default/objects/Demanda__c/Demanda__c.object-meta.xml
<CustomObject>
    <label>Demanda</label>
    <nameField>
        <displayFormat>DEM-{00000}</displayFormat>
        <label>Ref Demanda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demandas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>