AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Banos_Minimos__c.field-meta.xml
<CustomField>
    <fullName>Banos_Minimos__c</fullName>
    <label>Baños Mínimos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>