AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Cliente_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Comprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Comprador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandas Activas</relationshipLabel>
    <relationshipName>Demandas</relationshipName>
    <type>Lookup</type>
</CustomField>