AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Cliente_Interesado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Interesado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Interesado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandas Realizadas</relationshipLabel>
    <relationshipName>Demandas</relationshipName>
    <type>Lookup</type>
</CustomField>