AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Codigo_Postal_Deseado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_Deseado__c</fullName>
    <label>Código Postal Deseado</label>
    <length>5</length>
    <type>Text</type>
</CustomField>