AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Cruces_Pendientes__c.field-meta.xml
<CustomField>
    <fullName>Cruces_Pendientes__c</fullName>
    <label>Cruces Pendientes de Revisar</label>
    <summaryFilterItems>
        <field>Cruce__c.Estado_Propuesta__c</field>
        <operation>equals</operation>
        <value>Nueva Sugerencia</value>
    </summaryFilterItems>
    <summaryForeignKey>Cruce__c.Demanda__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>