AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
                <default>true</default>
                <label>Activa</label>
            </value>
            <value>
                <fullName>En pausa</fullName>
            </value>
            <value>
                <fullName>Satisfecha</fullName>
            </value>
            <value>
                <fullName>Descartada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>