AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Habitaciones_Minimas__c.field-meta.xml
<CustomField>
    <fullName>Habitaciones_Minimas__c</fullName>
    <label>Habitaciones Mínimas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>