AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Imprescindible_Ascensor__c.field-meta.xml
<CustomField>
    <fullName>Imprescindible_Ascensor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imprescindible Ascensor</label>
    <type>Checkbox</type>
</CustomField>