AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Metros_Minimos__c.field-meta.xml
<CustomField>
    <fullName>Metros_Minimos__c</fullName>
    <label>Metros Cuadrados Mínimos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>