AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Nombre_del_Interesado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Interesado__c</fullName>
    <formula>Cliente_Interesado__r.FirstName &amp; &quot; &quot; &amp; Cliente_Interesado__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Interesado</label>
    <type>Text</type>
</CustomField>