AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Poblacion_Deseada__c.field-meta.xml
<CustomField>
    <fullName>Poblacion_Deseada__c</fullName>
    <label>Población Deseada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>