AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Porcentaje_Financiacion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Financiacion__c</fullName>
    <inlineHelpText>Porcentaje del precio de compra que necesita pedir al banco (ej. 80%).</inlineHelpText>
    <label>Porcentaje Financiación Solicitado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>