AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Presupuesto_Maximo__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Maximo__c</fullName>
    <label>Presupuesto Máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>