AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Provincia_Deseada__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Deseada__c</fullName>
    <label>Provincia Deseada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincias_Espana</valueSetName>
    </valueSet>
</CustomField>