AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Tipo_Operacion_Buscada__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Operacion_Buscada__c</fullName>
    <label>Tipo de Operación Buscada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra</fullName>
                <default>true</default>
                <label>Compra</label>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>