AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Total_Cruces__c.field-meta.xml
<CustomField>
    <fullName>Total_Cruces__c</fullName>
    <label>Total de Cruces</label>
    <summaryForeignKey>Cruce__c.Demanda__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>