AppInmobiliaria/force-app/main/default/objects/Demanda__c/fields/Zona_Deseada__c.field-meta.xml
<CustomField>
    <fullName>Zona_Deseada__c</fullName>
    <label>Zona Deseada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>