AppInmobiliaria/force-app/main/default/objects/Demanda__c/validationRules/Banos_Minimos_Enteros.validationRule-meta.xml
<ValidationRule>
    <fullName>Banos_Minimos_Enteros</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR(Banos_Minimos__c) &lt;&gt; Banos_Minimos__c</errorConditionFormula>
    <errorDisplayField>Banos_Minimos__c</errorDisplayField>
    <errorMessage>El número de baños debe ser un valor exacto entero (sin decimales).</errorMessage>
</ValidationRule>