AppInmobiliaria/force-app/main/default/objects/Demanda__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Comprador__c</columns>
    <columns>Habitaciones_Minimas__c</columns>
    <columns>Presupuesto_Maximo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>